Fix for windows
git-svn-id: svn+ssh://solsvn.oma.be/home/sidc/ssr/SWHV_repos/trunk/client/jhv-3d-wcs@2480 b4e469a2-07ce-4b26-9273-4d7d95a670c7